// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextInput: type DateTime renders disabled 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-hZiMVj ejLjyl"
    disabled={true}
  >
    <label
      className="sc-dDaJoQ kgpYIu"
    >
      medium
    </label>
    <input
      className="sc-hQikvm kjvnfL"
      disabled={true}
      placeholder=" "
      type="datetime-local"
    />
    <p
      className="sc-McAUB hJnEiJ"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-hZiMVj ejLjyl"
    disabled={true}
  >
    <label
      className="sc-dDaJoQ kgpYIu"
    >
      large
    </label>
    <input
      className="sc-hQikvm cwcNaw"
      disabled={true}
      placeholder=" "
      type="datetime-local"
    />
    <p
      className="sc-McAUB hJnEiJ"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-hZiMVj ejLjyl"
    disabled={true}
  >
    <div
      className="sc-eZkcaX fwAgtM"
    >
      <input
        className="sc-hQikvm kMCGiK"
        disabled={true}
        placeholder=" "
        type="datetime-local"
      />
      <label
        className="sc-hhICeM dxUkQc"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-McAUB hJnEiJ"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;

exports[`TextInput: type DateTime renders error 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-hZiMVj kfaLav"
  >
    <label
      className="sc-dDaJoQ kgpYIu"
    >
      medium
    </label>
    <input
      className="sc-hQikvm fQiIiJ"
      placeholder="Placeholder"
      type="datetime-local"
    />
    <p
      className="sc-McAUB fEGrYJ"
      role="alert"
    >
      Error message
    </p>
  </div>
  <div
    className="sc-hZiMVj kfaLav"
  >
    <label
      className="sc-dDaJoQ kgpYIu"
    >
      large
    </label>
    <input
      className="sc-hQikvm icNZZq"
      placeholder="Placeholder"
      type="datetime-local"
    />
    <p
      className="sc-McAUB fEGrYJ"
      role="alert"
    >
      Error message
    </p>
  </div>
  <div
    className="sc-hZiMVj kfaLav"
  >
    <div
      className="sc-eZkcaX fwAgtM"
    >
      <input
        className="sc-hQikvm gZdjbA"
        placeholder="Placeholder"
        type="datetime-local"
      />
      <label
        className="sc-hhICeM dxUkQc"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-McAUB fEGrYJ"
      role="alert"
    >
      Error message
    </p>
  </div>
</div>
`;

exports[`TextInput: type DateTime renders readOnly 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-hZiMVj kfaLav"
  >
    <label
      className="sc-dDaJoQ kgpYIu"
    >
      medium
    </label>
    <input
      className="sc-hQikvm kjvnfL"
      placeholder=" "
      readOnly={true}
      type="datetime-local"
    />
    <p
      className="sc-McAUB hJnEiJ"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-hZiMVj kfaLav"
  >
    <label
      className="sc-dDaJoQ kgpYIu"
    >
      large
    </label>
    <input
      className="sc-hQikvm cwcNaw"
      placeholder=" "
      readOnly={true}
      type="datetime-local"
    />
    <p
      className="sc-McAUB hJnEiJ"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-hZiMVj kfaLav"
  >
    <div
      className="sc-eZkcaX fwAgtM"
    >
      <input
        className="sc-hQikvm kMCGiK"
        placeholder=" "
        readOnly={true}
        type="datetime-local"
      />
      <label
        className="sc-hhICeM dxUkQc"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-McAUB hJnEiJ"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;

exports[`TextInput: type DateTime renders with hint 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-hZiMVj kfaLav"
  >
    <label
      className="sc-dDaJoQ kgpYIu"
    >
      medium
    </label>
    <input
      className="sc-hQikvm kjvnfL"
      placeholder="Placeholder"
      type="datetime-local"
    />
    <p
      className="sc-McAUB hJnEiJ"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-hZiMVj kfaLav"
  >
    <label
      className="sc-dDaJoQ kgpYIu"
    >
      large
    </label>
    <input
      className="sc-hQikvm cwcNaw"
      placeholder="Placeholder"
      type="datetime-local"
    />
    <p
      className="sc-McAUB hJnEiJ"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-hZiMVj kfaLav"
  >
    <div
      className="sc-eZkcaX fwAgtM"
    >
      <input
        className="sc-hQikvm kMCGiK"
        placeholder="Placeholder"
        type="datetime-local"
      />
      <label
        className="sc-hhICeM dxUkQc"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-McAUB hJnEiJ"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;

exports[`TextInput: type DateTime renders with label 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-hZiMVj kfaLav"
  >
    <label
      className="sc-dDaJoQ kgpYIu"
    >
      medium
    </label>
    <input
      className="sc-hQikvm kjvnfL"
      placeholder="Placeholder"
      type="datetime-local"
    />
  </div>
  <div
    className="sc-hZiMVj kfaLav"
  >
    <label
      className="sc-dDaJoQ kgpYIu"
    >
      large
    </label>
    <input
      className="sc-hQikvm cwcNaw"
      placeholder="Placeholder"
      type="datetime-local"
    />
  </div>
  <div
    className="sc-hZiMVj kfaLav"
  >
    <div
      className="sc-eZkcaX fwAgtM"
    >
      <input
        className="sc-hQikvm kMCGiK"
        placeholder="Placeholder"
        type="datetime-local"
      />
      <label
        className="sc-hhICeM dxUkQc"
      >
        xlarge
      </label>
    </div>
  </div>
</div>
`;

exports[`TextInput: type DateTime renders with label RTL 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-hZiMVj kfaLav"
  >
    <label
      className="sc-dDaJoQ kgpYIu"
      dir="rtl"
    >
      medium
    </label>
    <input
      className="sc-hQikvm iqpzlZ"
      dir="rtl"
      placeholder="Placeholder"
      type="datetime-local"
    />
  </div>
  <div
    className="sc-hZiMVj kfaLav"
  >
    <label
      className="sc-dDaJoQ kgpYIu"
      dir="rtl"
    >
      large
    </label>
    <input
      className="sc-hQikvm dvzPuG"
      dir="rtl"
      placeholder="Placeholder"
      type="datetime-local"
    />
  </div>
  <div
    className="sc-hZiMVj kfaLav"
  >
    <div
      className="sc-eZkcaX fwAgtM"
    >
      <input
        className="sc-hQikvm fFQjTo"
        dir="rtl"
        placeholder="Placeholder"
        type="datetime-local"
      />
      <label
        className="sc-hhICeM cryZUP"
      >
        xlarge
      </label>
    </div>
  </div>
</div>
`;

exports[`TextInput: type DateTime renders without label 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-hZiMVj kfaLav"
  >
    <input
      className="sc-hQikvm kjvnfL"
      placeholder="medium"
      type="datetime-local"
    />
  </div>
  <div
    className="sc-hZiMVj kfaLav"
  >
    <input
      className="sc-hQikvm cwcNaw"
      placeholder="large"
      type="datetime-local"
    />
  </div>
  <div
    className="sc-hZiMVj kfaLav"
  >
    <div
      className="sc-eZkcaX fwAgtM"
    >
      <input
        className="sc-hQikvm gIlWtb"
        placeholder="xlarge"
        type="datetime-local"
      />
      <label
        className="sc-hhICeM dxUkQc"
      />
    </div>
  </div>
</div>
`;

exports[`TextInput: type DateTime supports background colour 1`] = `
<div
  className="flex flex-col lg:flex-row justify-around items-end w-full gap-2"
>
  <div
    className="sc-hZiMVj kfaLav"
  >
    <label
      className="sc-dDaJoQ kgpYIu"
    >
      medium
    </label>
    <input
      className="sc-hQikvm A-dnmQ"
      placeholder="Placeholder"
      type="datetime-local"
    />
    <p
      className="sc-McAUB hJnEiJ"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-hZiMVj kfaLav"
  >
    <label
      className="sc-dDaJoQ kgpYIu"
    >
      large
    </label>
    <input
      className="sc-hQikvm iDFTyL"
      placeholder="Placeholder"
      type="datetime-local"
    />
    <p
      className="sc-McAUB hJnEiJ"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
  <div
    className="sc-hZiMVj kfaLav"
  >
    <div
      className="sc-eZkcaX huZTyb"
    >
      <input
        className="sc-hQikvm kMCGiK"
        placeholder="Placeholder"
        type="datetime-local"
      />
      <label
        className="sc-hhICeM dxUkQc"
      >
        xlarge
      </label>
    </div>
    <p
      className="sc-McAUB hJnEiJ"
      role="alert"
    >
      Informative message holder
    </p>
  </div>
</div>
`;
